# trustgraph-engine

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: alerts.py  groups.py  health.py  review_cases.py  transactions.py  trust_edges.py  users.py
backend/app/core/: config.py
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/schemas/: __init__.py  domain.py
backend/app/services/: risk.py
backend/scripts/: demo_flow.py
backend/tests/: test_api_flows.py  test_risk_scoring.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  PageHeader.tsx  RiskBadge.tsx  StatCard.tsx  StateBlock.tsx
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  Groups.tsx  ReviewCases.tsx  Transactions.tsx  Users.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/tests/: trustgraph-flow.spec.ts
