[project]
name = "trustgraph-engine-backend"
version = "0.1.0"
description = "Risk, fraud, and reputation engine for community finance platforms."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
